--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: diamond_node_slider
 description: The node is a diamond slider, which can achieve two effects with transition value and node value.
-version: 0.0.1+7
+version: 1.0.0
 homepage: https://github.com/dushiling
 repository: https://github.com/dushiling/diamond_node_slider
 
